--- a/packages/sage-assets/lib/stylesheets/components/_card_highlight.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_card_highlight.scss
@@ -23,14 +23,14 @@ $-card-highlight-size: rem(12px);
 
 .sage-card-highlight--right {
   inset-inline-end: 0;
-  border-top-right-radius: $-card-highlight-border-radius;
-  border-bottom-right-radius: $-card-highlight-border-radius;
+  border-start-end-radius: $-card-highlight-border-radius;
+  border-end-end-radius: $-card-highlight-border-radius;
 }
 
 .sage-card-highlight--left {
   inset-inline-start: 0;
-  border-top-left-radius: $-card-highlight-border-radius;
-  border-bottom-left-radius: $-card-highlight-border-radius;
+  border-start-start-radius: $-card-highlight-border-radius;
+  border-end-start-radius: $-card-highlight-border-radius;
 }
 
 .sage-card-highlight--top,
@@ -42,14 +42,14 @@ $-card-highlight-size: rem(12px);
 
 .sage-card-highlight--top {
   inset-block-start: 0;
-  border-top-left-radius: $-card-highlight-border-radius;
-  border-top-right-radius: $-card-highlight-border-radius;
+  border-start-start-radius: $-card-highlight-border-radius;
+  border-start-end-radius: $-card-highlight-border-radius;
 }
 
 .sage-card-highlight--bottom {
   inset-block-end: 0;
-  border-bottom-left-radius: $-card-highlight-border-radius;
-  border-bottom-right-radius: $-card-highlight-border-radius;
+  border-end-start-radius: $-card-highlight-border-radius;
+  border-end-end-radius: $-card-highlight-border-radius;
 }
 
 @each $-color-name, $-color-sliders in $sage-colors {
