--- a/packages/sage-assets/lib/stylesheets/global/_reboot.scss
+++ b/packages/sage-assets/lib/stylesheets/global/_reboot.scss
@@ -40,6 +40,10 @@ body {
   font-weight: 400;
   line-height: 1.5; /* NOTE: line-height must be '1.5' to avoid conflicts with Ladera */
   text-align: left;
+
+  [dir="rtl"] & {
+    text-align: right;
+  }
 }
 
 [tabindex="-1"]:focus {
