style: update inset values back to physical values

--- a/packages/sage-assets/lib/stylesheets/components/_button.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_button.scss
@@ -475,7 +475,7 @@ $-btn-loading-min-height: rem(36px);
     }
 
     &::after {
-      inset-inline-start: 7px;
+      left: 7px;
       font-size: 11px;
       font-weight: sage-font-weight(bold);
     }
