--- a/packages/sage-assets/lib/stylesheets/components/_input_group.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_input_group.scss
@@ -44,8 +44,8 @@ $-input-group-pw-field-button-color-text-hover: sage-color(black);
       content: "";
       display: block;
       position: absolute;
-      inset-block-start: 50%;
-      inset-inline-start: 50%;
+      top: 50%;
+      left: 50%;
       transform: translate3d(-50%, -50%, 0) rotate(-45deg);
       height: rem(1px);
       width: sage-font-size(xl, false);
