--- a/packages/sage-assets/lib/stylesheets/components/_radio.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_radio.scss
@@ -102,8 +102,8 @@ $-radio-focus-outline-color: currentColor;
       content: "" ;
       z-index: sage-z-index(default, 1);
       position: absolute;
-      inset-block-start: 0;
-      inset-inline-start: 0;
+      top: 0;
+      left: 0;
       width: 100%;
       height: 100%;
     }
@@ -131,8 +131,8 @@ $-radio-focus-outline-color: currentColor;
     content: "";
     display: block;
     position: absolute;
-    inset-inline-start: 50%;
-    inset-block-start: 50%;
+    left: 50%;
+    top: 50%;
     transform: translate3d(-50%, -50%, 0);
     color: inherit;
     border-radius: inherit;
