--- a/packages/sage-assets/lib/stylesheets/components/_sidebar.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_sidebar.scss
@@ -61,8 +61,8 @@ $-sidebar-top-offset: $sage-assistant-height;
   content: "";
   display: block;
   position: absolute;
-  inset-block-start: calc(-1 * #{sage-spacing(sm)});
-  inset-inline-start: 0;
+  top: calc(-1 * #{sage-spacing(sm)});
+  left: 0;
   inset-inline-end: 0;
   height: sage-spacing(sm);
   background: linear-gradient(to top, #{$-sidebar-color-background} 0%, rgba(255, 255, 255, 0) 60%);
