--- a/packages/sage-assets/lib/stylesheets/components/_card.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_card.scss
@@ -100,8 +100,8 @@ $-sage-card-background: transparent;
   &::before {
     content: "";
     position: absolute;
-    inset-inline-start: 0;
-    inset-block-start: 50%;
+    left: 0;
+    top: 50%;
     width: 100%;
     height: 1px;
     background: sage-color(grey, 200);
