--- a/packages/sage-assets/lib/stylesheets/components/_checkbox.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_checkbox.scss
@@ -148,8 +148,8 @@ $-checkbox-focus-outline-color: sage-color(purple, 300);
     content: "";
     display: block;
     position: absolute;
-    inset-inline-start: 50%;
-    block-start: 50%;
+    left: 50%;
+    top: 50%;
     transition: opacity 0.2s ease-in-out, transform $-checkbox-transition;
     opacity: 0;
   }
