--- a/packages/sage-assets/lib/stylesheets/components/_menu_button.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_menu_button.scss
@@ -23,8 +23,8 @@ $-menubtn-focus-outline-color: currentColor;
     content: none;
     display: inline-block;
     position: absolute;
-    inset-inline-start: 50%;
-    inset-block-start: 50%;
+    left: 50%;
+    top: 50%;
     transform: translate3d(-50%, -50%, 0) scale(0.94);
     width: calc(100% + ((#{$-menubtn-focus-outline-width} * 1px ) + (#{$-menubtn-focus-outline-size} * 2)));
     height: calc(100% + ((#{$-menubtn-focus-outline-width} * 1px) + (#{$-menubtn-focus-outline-size} * 2)));
