--- a/packages/sage-assets/lib/stylesheets/components/_panel.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_panel.scss
@@ -42,8 +42,8 @@
   &::before {
     content: "";
     position: absolute;
-    inset-inline-start: 0;
-    inset-block-start: 50%;
+    left: 0;
+    top: 50%;
     width: 100%;
     height: 1px;
     background: sage-color(grey, 200);
