--- a/packages/sage-assets/lib/stylesheets/components/_switch.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_switch.scss
@@ -111,8 +111,8 @@ $-switch-toggle-size: rem(16px);
       content: "" ;
       z-index: sage-z-index(default, 1);
       position: absolute;
-      inset-block-start: 0;
-      inset-inline-start: 0;
+      top: 0;
+      left: 0;
       width: 100%;
       height: 100%;
     }
@@ -136,8 +136,8 @@ $-switch-toggle-size: rem(16px);
     content: "";
     display: block;
     position: absolute;
-    inset-inline-start: 50%;
-    inset-block-start: 50%;
+    left: 50%;
+    top: 50%;
   }
 
   &::after {  // switch toggle
