--- a/packages/sage-assets/lib/stylesheets/components/_tag.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_tag.scss
@@ -49,7 +49,7 @@ $-tag-button-icon-mobile-size: rem(24px);
 
   &::before {
     position: relative;
-    inset-inline-start: rem(1px);
+    left: rem(1px);
     padding: 0;
     font-size: rem(13px);
   }
