--- a/packages/sage-assets/lib/stylesheets/core/mixins/_sage.scss
+++ b/packages/sage-assets/lib/stylesheets/core/mixins/_sage.scss
@@ -78,6 +78,10 @@
     .sage-link--icon-right-#{$icon-name} {
       flex-direction: row-reverse;
 
+      [dir="rtl"] & {
+        flex-direction: row;
+      }
+
       &::before {
         @include sage-icon-base($icon-name, md, pine);
 
@@ -96,6 +100,10 @@
     .sage-btn--icon-left-#{$icon-name},
     .sage-link--icon-left-#{$icon-name} {
       flex-direction: row;
+
+      [dir="rtl"] & {
+        flex-direction: row-reverse;
+      }
 
       &::before {
         @include sage-icon-base($icon-name, md, pine);
@@ -674,9 +682,9 @@
 
     content: "";
     position: absolute;
-    inset-inline-end: $spacing-off;
-    inset-block-end: 0;
-    inset-inline-start: $spacing-off;
+    right: $spacing-off;
+    bottom: 0;
+    left: $spacing-off;
     height: map-get($sage-active-underline-configs, height);
     background-color: map-get($sage-active-underline-configs, color);
     border-radius: map-get($sage-active-underline-configs, radius);
@@ -684,15 +692,15 @@
   }
 
   &:focus::#{$item-underline} {
-    inset-inline-start: 0;
-    inset-inline-end: 0;
+    left: 0;
+    right: 0;
   }
 
   &:active,
   &#{$active-class} {
     &::#{$item-underline} {
-      inset-inline-start: 0;
-      inset-inline-end: 0;
+      left: 0;
+      right: 0;
     }
   }
 }
