--- a/packages/sage-assets/lib/stylesheets/components/_button.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_button.scss
@@ -322,8 +322,8 @@ $-btn-loading-min-height: rem(36px);
   .sage-input-group & {
     position: absolute;
     z-index: sage-z-index(default, 1);
-    inset-inline-start: rem(1px);
-    inset-block-end: rem(1px);
+    inset-inline-end: rem(1px);
+    bottom: rem(1px);
     height: rem(38px);
     background-color: sage-color(white);
     box-shadow: rem(-1px) 0 0 0 sage-color(grey, 300);
