--- a/packages/sage-assets/lib/stylesheets/components/_dropdown.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_dropdown.scss
@@ -411,7 +411,7 @@ $-dropdown-trigger-dropdown-offset: rem(16px) + sage-spacing(xs);
     position: fixed;
     z-index: sage-z-index(default, 90);
     inset-block-start: 0;
-    inset-inline-start: 0;
+    inset-inline-end: 0;
     inset-block-end: 0;
     inset-inline-start: 0;
   }
