fix: add rtl spacer styles

--- a/packages/sage-assets/lib/stylesheets/utilities/_spacer.scss
+++ b/packages/sage-assets/lib/stylesheets/utilities/_spacer.scss
@@ -11,6 +11,13 @@ $css-property-map: (
   left: inline-start
 );
 
+$css-property-map-rtl: (
+  top: block-start,
+  right: inline-start,
+  bottom: block-end,
+  left: inline-end
+);
+
 @each $-name, $-value in $sage-spacings {
   $suffix: "-#{$-name}";
 
@@ -25,9 +32,14 @@ $css-property-map: (
     left
   ) {
     $css-logical-property: map-get($css-property-map, $-box-side);
+    $css-logical-property-rtl: map-get($css-property-map-rtl, $-box-side);
 
     .sage-spacer-#{$-box-side}#{$suffix} {
       margin-#{$css-logical-property}: $-value;
+    }
+
+    [dir="rtl"] .sage-spacer-#{$-box-side}#{$suffix} {
+      margin-#{$css-logical-property-rtl}: $-value;
     }
   }
 }
