style: convert focus to focus-within

--- a/packages/sage-assets/lib/stylesheets/components/_alert.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_alert.scss
@@ -172,7 +172,7 @@ $-alert-border-colors: (
       text-decoration: underline;
     }
 
-    &:focus {
+    &:focus-visible {
       @include sage-focus-outline--update-color(sage-color(purple, 30));
     }
   }
@@ -199,7 +199,7 @@ $-alert-border-colors: (
       text-decoration: none;
     }
 
-    &:focus {
+    &:focus-visible {
       @include sage-focus-outline--update-color(sage-color(purple, 30));
     }
   }
