style: adjust font sizing

--- a/packages/sage-assets/lib/stylesheets/components/_hint.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_hint.scss
@@ -21,7 +21,7 @@ $-hint-background-color: sage-color(grey, 200);
 }
 
 .sage-hint__content {
-  @extend %t-sage-body-small;
+  @extend %t-sage-body;
   color: $-hint-text-color;
   word-break: break-word;
 }
