fix: add-border-to-inner-cards-and-panels

--- a/packages/sage-assets/lib/stylesheets/components/_stat_box.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_stat_box.scss
@@ -17,6 +17,7 @@ $-stat-box-image-max-width: rem(48px);
   .sage-card &,
   .sage-panel & {
     box-shadow: none;
+    border: sage-border();
   }
 
   &.sage-stat-box--raised {
