--- a/packages/sage-assets/lib/stylesheets/components/_transaction_card.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_transaction_card.scss
@@ -14,6 +14,7 @@ $-transaction-card-price-max-width: rem(100px);
   .sage-card &,
   .sage-panel & {
     box-shadow: none;
+    border: sage-border();
   }
 
   position: relative;
