--- a/packages/sage-assets/lib/stylesheets/components/_card.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_card.scss
@@ -19,6 +19,7 @@ $-sage-card-background: transparent;
   .sage-card,
   .sage-panel & {
     box-shadow: none;
+    border: sage-border();
   }
 }
 
