--- a/packages/sage-assets/lib/stylesheets/components/_choice.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_choice.scss
@@ -102,6 +102,7 @@ $-choice-radio-color-checked-inner: map-get($sage-radio-colors, checked-inner);
   .sage-card & ,
   .sage-panel & {
     box-shadow: none;
+    border: sage-border();
   }
 
   .sage-tabs--layout-default &:not(:last-child) {
