--- a/packages/sage-assets/lib/stylesheets/components/_switch.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_switch.scss
@@ -48,6 +48,7 @@ $-switch-toggle-size: rem(16px);
     .sage-card &,
     .sage-panel & {
       box-shadow: none;
+      border: sage-border();
     }
   }
 
