fix: remove icon flex reverse

--- a/packages/sage-assets/lib/stylesheets/components/_icon.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_icon.scss
@@ -209,3 +209,8 @@ $-icon-beside-type: (
     --background-color: #{sage-color-combo($-color, default, background)};
   }
 }
+
+// flip icons with directional names for RTL - MUST LIVE IN PINE
+[dir="rtl"] pds-icon[name*="left"], [dir="rtl"] pds-icon[name*="right"] {
+  transform: scale(-1);
+}
