style: correct dropdown select size and fonts (#2009)
* style: correct dropdown select size and fonts

* style: add font-family

* style: lint errors

--- a/packages/sage-assets/lib/stylesheets/components/_button.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_button.scss
@@ -245,7 +245,9 @@ $-btn-loading-min-height: rem(36px);
   }
 
   .sage-dropdown__trigger--select & {
-    font-weight: sage-font-weight(regular);
+    height: rem(40px);
+    font-family: $-body-font-stack;
+    font-weight: sage-font-weight(medium);
     border-width: 0;
     box-shadow: sage-border-interactive(default);
     &:hover {
