style: add focus to correct styles on focus

--- a/packages/sage-assets/lib/stylesheets/components/_button.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_button.scss
@@ -533,6 +533,7 @@ a.sage-btn {
         }
       }
       @else if ($-style-type-name == focus) {
+        &:focus,
         &:focus-visible,
         &:active {
           color: map-get($-style-type-configs, color);
