style: update height property to min-height

--- a/packages/sage-assets/lib/stylesheets/components/_button.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_button.scss
@@ -245,7 +245,7 @@ $-btn-loading-min-height: rem(36px);
   }
 
   .sage-dropdown__trigger--select & {
-    height: rem(40px);
+    min-height: rem(40px);
     font-family: $-body-font-stack;
     font-weight: sage-font-weight(medium);
     border-width: 0;
